# aer-prealpha

./: .gitignore  CMakeLists.txt  LICENSE
lib/command/: CMakeLists.txt  _fwd.hh  command.cc  command.hh  sources.cmake
lib/core/: CMakeLists.txt  _fwd.hh  fraction.cc  fraction.hh  platform.cc  platform.hh  sources.cmake
lib/game/: CMakeLists.txt  sources.cmake  test1.hh  test2.hh
lib/input/: CMakeLists.txt  _fwd.hh  _utils.cc  _utils.hh  adapter_fallback.cc  adapter_fallback.hh  adapter_linux_x11.cc  adapter_linux_x11.hh  adapter_windows.cc  adapter_windows.hh  factory.cc  factory.hh  fallback.cc  fallback.hh  input.cc  input.hh  key.hh  linux_x11.cc  linux_x11.hh  linux_x11_raylib.cc  sources.cmake  windows.cc  windows.hh
scripts/: glob_sources.py
src/: CMakeLists.txt  input_thread.cc  input_thread.hh  main.cc  sources.cmake
